sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:5: error: not found: value echange_pos
  var echange_pos(Boolean)=true
      ^AlgCombSort:6: error: not found: value echange_pos
  while (ecart>1||echange_pos==true){
                  ^AlgCombSort:7: error: not found: value echange_pos
    echange_pos=false
    ^AlgCombSort:9: error: reassignment to val
      ecart=ecart/1.3
           ^AlgCombSort:14: error: not found: value echange_pos
        echange_pos=true
        ^