sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  val ecart = getNombreValeurs
  var i=0
  var echange_pos(Boolean)=true
  while (ecart>1||echange_pos==true){
    echange_pos=false
    if (ecart>1){
      ecart=ecart/1.3
    }
    while (i+ecart<getNombreValeurs){
      if (plusPetit(i,i+ecart)){
        echange(i,i+ecart)
        echange_pos=true
      }
      i=i+1
    }
  }
}